Commit 2 - Added MakeFlange.cs

--- a/BendAssist.App/BendAssist.App.csproj
+++ b/BendAssist.App/BendAssist.App.csproj
@@ -7,4 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="FileHandling\" />
+  </ItemGroup>
 </Project>
