--- a/BendAssist.App/BendAssist.App.csproj
+++ b/BendAssist.App/BendAssist.App.csproj
@@ -7,6 +7,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
 		<ApplicationIcon>Data/Icon.ico</ApplicationIcon>
+    <OutDir>../Bin</OutDir>
 	</PropertyGroup>
 
 	<ItemGroup>
