--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@
 *.ico filter=lfs diff=lfs merge=lfs -text
 *.mesh filter=lfs diff=lfs merge=lfs -text
 *.mesh2 filter=lfs diff=lfs merge=lfs -text
+*.geo filter=lfs diff=lfs merge=lfs -text
