--- a/Src/BendAssist.App/BendAssist.App.csproj
+++ b/Src/BendAssist.App/BendAssist.App.csproj
@@ -7,7 +7,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<UseWPF>true</UseWPF>
 		<ApplicationIcon>Data/Icon.ico</ApplicationIcon>
-    <OutDir>../Bin</OutDir>
+    <OutDir>../../Bin</OutDir>
 	</PropertyGroup>
 
 	<ItemGroup>
